# VLM_grasper

./: .gitignore  CMakeLists.txt  README.md  README.txt  activate_conda.sh  bash_conda  colmapcmds.txt  film.txt  grasps.npy  package.xml  pointcloud.ply  reset_conda.sh  setup.py  setup_conda_env.sh
.catkin_tools/profiles/default/: devel_collisions.txt
cmake/Modules/: FindOptiX.cmake
include/VLM_grasper/: optix_wrapper.h
launch/: grasper_nodes.launch
msg/: Camera.msg  PointCloudWithCamera.msg
scripts/: edge_grasp_node.py  grasp_visualizer.py  pointcloud_publisher.py
src/: .rosinstall.bak  README.md  pyproject.toml
src/VLM_grasper/data/: points.npy  scores.npy  transformation_matrices.npy
src/VLM_grasper/models/: dataset_processor.py  vn_edge_grasp_network.py  vn_edge_grasper.py
src/VLM_grasper/optix/: main.cpp  optix_wrapper.cpp
src/VLM_grasper/simulator/: btsim.py  grasp.py  io_smi.py  perception.py  simulation_clutter_bandit.py
src/VLM_grasper/utils/: perform_edge_grasp.py  visualization_utils.py  visualization_utils_o3d.py  visualization_utils_pytorch3d.py
src/franka_ros/: README.md
src/franka_ros/franka_control/config/: default_controllers.yaml  franka_control_node.yaml
src/franka_ros/franka_control/launch/: custom.launch  franka_control.launch
src/franka_ros/franka_example_controllers/: CMakeLists.txt  franka_example_controllers_plugin.xml  package.xml
src/grasp_visualizations/: 1_create_pc.py  2_change_pc.py  3_single.py  camera_info.py  grasp_pointcloud.py  pc_colored.ply  pc_processed.ply  pca.py
src/image_segmentation/: sam.py  sam_helpers.py
src/nerf_teleoperation/: package.xml
src/nerf_teleoperation/description/: realsense.urdf.xacro  realsense_d435.urdf.xacro
src/nerf_teleoperation/launch/: anymal_bag.launch  franka.launch  unity_bag.launch  voxblox.launch
src/nerf_teleoperation/rviz/: bag_anymal_visualization.rviz  bag_franka_visualization.rviz  view.rviz
src/nerf_teleoperation_msgs/: CMakeLists.txt  package.xml
src/nerf_teleoperation_msgs/srv/: SplatRequest.srv
src/pointcloud_creation/: create_object_pc.py
src/ros_nerf/config/: anymal.yaml  ob0.yaml  panda.yaml  rosbag.yaml
src/ros_nerf/scripts/: ros_runner.py  ros_saver.py
src/ros_nerf/utils/: ros_config.py  sensor.py
src/rosbag/: align.py  extract_images.py  extract_pointcloud.py  get_intrinsics.py
src/vlm_grasper/: CMakeLists.txt  package.xml  setup.py
src/vlm_grasper/config/: config.yaml  experiments.yaml
src/vlm_grasper/launch/: grasper_nodes.launch  init.launch  octomap.launch  pipeline_bag.launch
src/vlm_grasper/msg/: Grasp.msg  PointCloudWithGrasps.msg
src/vlm_grasper/scripts/: bag_publisher.py  edge_grasp.py  experiment_manager.py  grasp_image_renderer.py  grasp_simulator.py  grasp_visualizer.py  image_to_pc.py  pointcloud_creator.py  pointcloud_publisher.py  pointcloud_transformer.py  process_pc.py  set_robot_position.py  show_pc.py  task_publisher.py  tf_broadcaster.py  visualize_pc.py  vlm_querier.py
src/vlm_grasper/tests/: test_edge_grasp.py  test_visualization.py
tests/: test_edge_grasp.py  test_visualization.py
(+104 files in other folders)
